# purity

./: README.md  pyproject.toml
src/purity/: cli.py  playground.py  types.py  utils.py
